--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -7,30 +7,27 @@
     android:padding="12dp"
     tools:ignore="MissingDefaultResource">
 
-    <TextView
-        android:id="@+id/item_title"
+   <TextView
+        android:id="@+id/post_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="32sp"
         android:textStyle="bold"/>
-
     <TextView
-        android:id="@+id/item_description"
+        android:id="@+id/post_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"/>
-
     <ImageView
-        android:id="@+id/item_image"
+        android:id="@+id/post_image"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         tools:ignore="ContentDescription" />
-
     <TextView
-        android:id="@+id/item_content"
+        android:id="@+id/post_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/black"
